--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="slides">
 	<section>
 	  <div class="qrcode" id="qrcode-talk"/>
-	  <p><a href="http://fghaas.github.io/ceph-day-london" target="_blank"
-		id="talk">http://fghaas.github.io/ceph-day-london</a></p>
+	  <p><a href="http://arbrandes.github.io/vault2015" target="_blank"
+		id="talk">http://arbrandes.github.io/vault2015</a></p>
 	</section>
 
 	<section id="intro"
@@ -53,8 +53,8 @@
 	<section id="getintouch">
 	  <section>
 	    <div class="qrcode" id="qrcode-googleplus"/>
-	    <p><a href="https://plus.google.com/+FlorianHaas" target="_blank"
-		  id="googleplus">https://plus.google.com/+FlorianHaas</a></p>
+	    <p><a href="https://plus.google.com/+AdolfoBrandesHastexo" target="_blank"
+		  id="googleplus">https://plus.google.com/+AdolfoBrandesHastexo</a></p>
 	  </section>
 	</section>
 
